added current case sign up page

--- a/casesignup.html
+++ b/casesignup.html
@@ -12,7 +12,7 @@
     <!-- <link rel="stylesheet" href="assets/css/news-LP.css"> -->
     <link rel="stylesheet" href="assets/css/socialmediabuttons.css">
     <link rel="stylesheet" href="assets/css/navbar-logo-white.css">
-    <link rel="stylesheet" href="assets/css/currentcases.css">
+    <link rel="stylesheet" href="assets/css/newcases-about.css">
      <!-- jQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.5/waypoints.min.js"></script>
@@ -118,139 +118,30 @@
 <!-- /////////////////////////////////////////// -->
 
 <br>
-<div class="bg-image current-cases-image"></div>
+<div class="bg-image newcases-submit "></div>
 
+<div class="container">
 
+<div class="newcases-about-header">
+    KESSLER TOPAZ MELTZER & CHECK, LLP: INVESTOR CLASS ACTION <br> FILED AGAINST GOODRX HOLDINGS, INC. FOR SECURITIES FRAUD VIOLATIONS
+</div>
 
-    <section data-aos="fade-right">
-        <!--for demo wrap-->
-        <div class="current-cases-header">CURRENT CASES</div><br>
-        <div class="tbl-header">
-          <table cellpadding="0" cellspacing="0">
-            <thead>
-              <tr>
-                <th>Company</th>
-                <th>Exhange</th>
-                <th>Ticker</th>
-                <th>Status</th>
-                <th>INFO</th>
-              </tr>
-            </thead>
-          </table>
-        </div>
-        <div class="tbl-content">
-          <table cellpadding="0" cellspacing="0">
-            <tbody>
-              <tr>
-                <td id="GoodRX">GoodRx Holdings, Inc.</td>
-                <td>??</td>
-                <td>??</td>
-                <td>Pending</td>
-                <td id="GoodRX2" style="color: rgb(247, 99, 0);"><a>Learn More</td></a>
-              </tr>
-              <tr>
-                <td>Penumbra, Inc. (2021)</td>
-                <td>??</td>
-                <td>??</td>
-                <td>Pending</td>
-                <td id="GoodRX2" style="color: rgb(247, 99, 0);"><a>Learn More</td></a>
-              </tr>
-              <tr>
-                <td>QuantumScape Corporation f/k/a Kensington<br> Capital Acquisition Corp.</td>
-                <td>??</td>
-                <td>??</td>
-                <td>Active</td>
-                <td id="GoodRX2" style="color: rgb(247, 99, 0);"><a>Learn More</td></a>
-              </tr>
-              <tr>
-                <td>Restaurant Brands International Inc.</td>
-                <td>??</td>
-                <td>??</td>
-                <td>Pending</td>
-                <td id="GoodRX2" style="color: rgb(247, 99, 0);"><a>Learn More</td></a>
-              </tr>
-              <tr>
-                <td>Splunk Inc.</td>
-                <td>??</td>
-                <td>??</td>
-                <td>Pending</td>
-                <td id="GoodRX2" style="color: rgb(247, 99, 0);"><a>Learn More</td></a>
-              </tr>
-              <tr>
-                <td id="GoodRX">GoodRx Holdings, Inc.</td>
-                <td>??</td>
-                <td>??</td>
-                <td>Pending</td>
-                <td id="GoodRX2" style="color: rgb(247, 99, 0);"><a>Learn More</td></a>
-              </tr>
-              <tr>
-                <td>Penumbra, Inc. (2021)</td>
-                <td>??</td>
-                <td>??</td>
-                <td>Pending</td>
-                <td id="GoodRX2" style="color: rgb(247, 99, 0);"><a>Learn More</td></a>
-              </tr>
-              <tr>
-                <td>QuantumScape Corporation f/k/a Kensington<br> Capital Acquisition Corp.</td>
-                <td>??</td>
-                <td>??</td>
-                <td>Active</td>
-                <td id="GoodRX2" style="color: rgb(247, 99, 0);"><a>Learn More</td></a>
-              </tr>
-              <tr>
-                <td>Restaurant Brands International Inc.</td>
-                <td>??</td>
-                <td>??</td>
-                <td>Pending</td>
-                <td id="GoodRX2" style="color: rgb(247, 99, 0);"><a>Learn More</td></a>
-              </tr>
-              <tr>
-                <td>Splunk Inc.</td>
-                <td>??</td>
-                <td>??</td>
-                <td>Pending</td>
-                <td id="GoodRX2" style="color: rgb(247, 99, 0);"><a>Learn More</td></a>
-              </tr>
-              <tr>
-                <td id="GoodRX">GoodRx Holdings, Inc.</td>
-                <td>??</td>
-                <td>??</td>
-                <td>Pending</td>
-                <td id="GoodRX2" style="color: rgb(247, 99, 0);"><a>Learn More</td></a>
-              </tr>
-              <tr>
-                <td>Penumbra, Inc. (2021)</td>
-                <td>??</td>
-                <td>??</td>
-                <td>Pending</td>
-                <td id="GoodRX2" style="color: rgb(247, 99, 0);"><a>Learn More</td></a>
-              </tr>
-              <tr>
-                <td>QuantumScape Corporation f/k/a Kensington<br> Capital Acquisition Corp.</td>
-                <td>??</td>
-                <td>??</td>
-                <td>Active</td>
-                <td id="GoodRX2" style="color: rgb(247, 99, 0);"><a>Learn More</td></a>
-              </tr>
-              <tr>
-                <td>Restaurant Brands International Inc.</td>
-                <td>??</td>
-                <td>??</td>
-                <td>Pending</td>
-                <td id="GoodRX2" style="color: rgb(247, 99, 0);"><a>Learn More</td></a>
-              </tr>
-              <tr>
-                <td>Splunk Inc.</td>
-                <td>??</td>
-                <td>??</td>
-                <td>Pending</td>
-                <td id="GoodRX2" style="color: rgb(247, 99, 0);"><a>Learn More</td></a>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-      </section>
-      
+<div class="newcases-complaint">
+    VIEW COMPLAINT 
+</div>
+
+<div class="currentcases-submit-info">
+    SIGN UP 
+</div><br><br><br><br><br>
+
+<div class="newcases-description">
+    Notice is hereby given that a class action lawsuit has been filed on behalf of those who purchased or otherwise acquired GoodRx Holdings, Inc. (“GoodRx”) (NASDAQ: GDRX) Class A common stock between September 23, 2020 and November 16, 2020, inclusive (the “Class Period”).<br><br>
+
+    According to the complaint, GoodRx is a holding company that owns and operates a U.S. consumer-focused digital healthcare platform.  GoodRx represents that it provides consumers with free information and tools that allow them to compare prices and save on their prescription drug purchases. GoodRx provides its users with these services via apps and websites that display prices and discounts at local and mail-order pharmacies for both insured and uninsured Americans.  GoodRx primarily earns its revenue from prescription transaction fees paid by Pharmacy Benefit Managers that manage formularies and prescription transactions. GoodRx also generates revenue from subscription, advertising and telehealth services.<br><br>
+
+</div>
+
+</div>
 
     <!-- /////////////////////////////////////////// -->
 <!-- BEGINNING OF SOCIAL MEDIA BUTTONS -->
