added data security

--- a/datasecurity.html
+++ b/datasecurity.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="assets/css/socialmediabuttons.css">
     <link rel="stylesheet" href="assets/css/navbar-logo-white.css">
     <link rel="stylesheet" href="assets/css/FAQs.css">
-    <link rel="stylesheet" href="assets/css/community.css">
+    <link rel="stylesheet" href="assets/css/datasecurity.css">
      <!-- jQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.5/waypoints.min.js"></script>
@@ -120,61 +120,54 @@
 <!-- /////////////////////////////////////////// -->
 
 <br>
-<div class="bg-image community-image"></div>
+<div class="bg-image datasecurity-image"></div>
 
 <!-- /////////////////////////////////////////// -->
 <!-- BEGINNING OF IN THE COMMUNITY SECTION -->
  
  <!-- // COMMUNITY HEADER-->
- <div class="community-header" data-aos="fade-down">
-    IN THE COMMUNITY
+ <div class="datasecurity-header" data-aos="fade-down">
+    DATA SECURITY 
   </div>
  <!-- // END OF COMMUNITY HEADER -->
 
- <div class="community-section">
+
+ <div class="datasecurity-section">
     <div class="container"> 
+       
+        <div class="datasecurity-subheader">
+            Kessler Topaz is not only committed to serving investors, but the community as well. The Firm, its partners, and associates frequently support and participate in numerous charitable events and partner with various charitable organizations. In particular, Kessler Topaz has been a long-standing sponsor of The ALS Association and the American Cancer Society.
+            </div>
 
-        <div class="community-subheader">
-          Kessler Topaz is not only committed to serving investors, but the community as well. The Firm, its partners, and associates frequently support and participate in numerous charitable events and partner with various charitable organizations. In particular, Kessler Topaz has been a long-standing sponsor of The ALS Association and the American Cancer Society.
-          </div>
+            Kessler Topaz is dedicated to providing secure, uninterrupted service to our clients and has implemented numerous measures and protections to safeguard client transaction data.  Highlights are as follows:<br><br>
 
-       <div id="phillies-section">
-            <span style="color: rgb(114, 148, 13); font-size: 18px; font-weight: 500; letter-spacing: .1em;">EAGLES AUTISM FOUNDATION<br><br></span>
-            Kessler Topaz is a proud sponsor and supporter of the Eagles Autism Challenge in Philadelphia. The Eagles Autism Challenge ("EAC") is dedicated to raising funds for innovative research and programs to help unlock the mystery of autism. By providing the necessary resources to doctors and scientists at leading institutions, the EAC is able to assist those currently affected by autism as well as future generations. The EAC event aims to inspire and engage the community, so together, we can provide much needed support to make a lasting impact in the field of autism.
-        </div>
-<br><br>
-        <div id="ACS-section">
-            <span style="color: rgb(114, 148, 13); font-size: 18px; font-weight: 500; letter-spacing: .1em">BACK ON MY FEET<br><br></span>
-            Back on My Feet ("BOMF") seeks to revolutionize the way society approaches homelessness. BOMF's unique model demonstrates that if you first restore confidence, strength and self-esteem, individuals are better equipped to tackle the road ahead. For all in need, BOMF aims to provide: practical training and employment resources for achieving independence; an environment that promotes accountability; and a community that offers compassion and hope. For all with the capacity to serve – volunteers, donors, community and corporate partners – BOMF seeks to engage you in the profound experience of empowering individuals to achieve what once seemed impossible through the seemingly simple act of putting one foot in front of the other.
-        </div>
-<br><br>
-        <div id="special-oly-section">
-            <span style="color: rgb(114, 148, 13); font-size: 18px; font-weight: 500; letter-spacing: .1em">SPECIAL OLYMPICS PENNSYLVANIA<br><br></span>
-            Kessler Topaz is an enthusiastic sponsor and supporter of Special Olympics Pennsylvania. In Pennsylvania, Special Olympics supports more than 20,000 adults and children with intellectual disabilities -- providing these athletes with year-round training and competition in a variety of Olympic-style sports at no cost to them. For the past several years, a large contingent of Firm employees, family and friends have volunteered at Special Olympics Pennsylvania’s Fall Festival – the largest student-run event in the world. The Fall Festival is held each year at Villanova University and hosts over 1,000 athletes who compete in bocce ball, long distance running, power-lifting, volleyball, soccer, and roller skating. Through Special Olympics, athletes have opportunities to develop their physical fitness, demonstrate courage, experience joy, and participate in a sharing of gifts, skills, and friendship with their families, other Special Olympics athletes, and the community. the Firm is proud to participate in this amazing event and to support such a noble cause.
-        </div>
-<br><br>
-        <div id="back-feet-section">
-            <span style="color: rgb(114, 148, 13); font-size: 18px; font-weight: 500; letter-spacing: .1em">TEMPLE UNIVERSITY BEASLEY SCHOOL OF LAW DIVERSITY SCHOLARSHIP<br><br></span>
-            Kessler Topaz is committed to encouraging and facilitating well-qualified minority undergraduates to pursue a career in the legal profession. To that end, the Firm has partnered with the Temple University Beasley School of Law to offer a yearly scholarship to one deserving minority candidate, covering tuition and related costs, to help promote diversity within the local legal community. The scholarship recipient is also eligible to participate in an internship with the Firm over the summer following their first year of law school. Temple University has educated many of the Firm’s top attorneys and we believe that this institution is the best fit with our Firm’s litigation practices. Temple students have the opportunity to join Temple’s world renowned Trial Advocacy Program, which is an excellent training ground for future litigators. This, coupled with their strenuous curriculum, fosters an environment where creative litigators can begin to make their mark.
-        </div>
+<div id="datasecurity-bullets">
+<li>The Firm's Information Security controls are audited annually by a licensed CPA firm (SOC 1 Type II and SOC 2 Type II audit reports are available upon request).</li><br>
+<li>The Firm has a robust in-house IT department consisting of 10 employees - led by Head of IT, Andrew Wells, who has over 20 years of experience in the field.</li><br>
+<li>Kessler Topaz partners with an outside security firm to enhance our internal efforts with Security Configuration Benchmarking, Internal and External Vulnerability Assessments, Internal and External Network Penetration Testing, SIEM (Security information and event management), Phishing Simulation Testing, Annual Information Security Awareness Training, and Consulting in various areas including Risk Management, Breach Response and Legal and Regulatory Compliance, including without limitation, GDPR.</li><br>
+<li>Kessler Topaz meets industry standards to protect our systems' physical security and network access to client transaction data.</li><br>
+<li>Kessler Topaz utilizes a cutting edge data analytics environment built on the Microsoft Technology Stack in conjunction with Qlik Sense for data visualization and discovery, while our data analytics environment leverages security through Microsoft Azure.</li><br>
+<li>Client transaction data is logically separated from all other client data and is only accessible by Kessler Topaz’s 35-member internal Portfolio Monitoring & Claims Administration Department, each of whom is thoroughly screened annually.</li><br>
+<li>Continuous logging and alerts are in place for all systems that handle client data. Logs are also routinely reviewed.</li><br>
+<li>Client transaction data is encrypted both in transit and at rest using industry-standard algorithms, and user-level access controls are in place.</li><br>
+<li>Public PGP keys for clients are utilized to add an additional layer of encryption to transaction data.</li><br>
+<li>Procedures are regularly updated and we test our ability to maintain services during and after disasters in order to minimize any impact on our clients or their data.</li><br>
+<li>Transaction data is entirely backed up and stored encrypted. All servers and data are replicated from Microsoft's US-East location to Microsoft's US-West location using Microsoft Azure Site Recovery service.</li>
+</div>
 
-        <br>
-<!-- 
-        <div class="comm-logos">
-          <img src="assets/images/community/eagles.png" width="300" height="185">
-          <img src="assets/images/community/phillies.png" width="290" height="200">
-          <img src="assets/images/community/ACS.png" width="270" height="170">
-          <img src="assets/images/community/specialolympics.png" width="230" height="200">
-          <img src="assets/images/community/backonmyfeet.png" width="320" height="200">
-          <img src="assets/images/community/temple.png" width="175" height="160">
+
+
+        <div class="SOC-images" data-aos="fade-left">
+            <img src="assets/images/SOC1.png">
+            <img src="assets/images/SOC2.png">
         </div>
 
-          <div class="all-comm-logos">
-            <img src="assets/images/community/allcomlogos.png" width="400">
-          </div> -->
 
     </div>
 </div>
+
+
+
 
 <!-- END OF IN THE COMMUNITY SECTION  -->
 <!-- /////////////////////////////////////////// -->
