updated people background

--- a/people-LP.html
+++ b/people-LP.html
@@ -126,22 +126,22 @@
     <div class="container"> 
 
   <div class="people-LP-name" data-aos="fade-left">
-    NAUMON A. AMJED<br>
+    J. DANIEL ALBERT <br>
 
     <div class="people-LP-title">
         PARTNER
     </div><br>
 
     <div class="people-LP-phone">
-        D &nbsp; 484.270.1467<br>
-        F &nbsp; 610.667.7056<br>
-        E &nbsp; <span style="color: #0066c8;"> namjed@ktmc.com </span><br>
+        D &nbsp; 610.822.0276<br>
+        F &nbsp; 267.948.2512<br>
+        E &nbsp; <span style="color: #007bee;"> dalbert@ktmc.com </span><br>
         L &nbsp; Radnor, PA <br>
     </div>
 
   </div>
 
-  <img src="assets/images/professionals/amjed-LP.png" alt="" id="people-img" data-aos="fade-right">
+  <img src="assets/images/albert.png" alt="" id="people-img" data-aos="fade-right">
        
     </div>
 </div>
@@ -154,19 +154,15 @@
     <div class="row">
 
     <div class="col-md-8">
-        Naumon A. Amjed, a partner of the Firm, concentrates his practice on new matter development with a focus on analyzing securities class action lawsuits, direct (or opt-out) actions, SEC whistleblower actions, breach of fiduciary duty cases, antitrust matters, and oil and gas litigation.   
-            <br><br>
-            Naumon, along with Sean M. Handler, oversees the Firm’s lead plaintiff practice group and frequently counsels the Firm’s clients on litigation options in the United States and abroad and has significant experience litigating actions in state and federal courts, as well as representing clients pursuing claims in international actions.
+      J. Daniel Albert, a partner of the Firm, has devoted his career to prosecuting shareholder litigation, recovering substantial damages on behalf of shareholders stemming from corporate directors’ breaches of fiduciary duties, vindicating shareholders’ rights, and ensuring that public companies engage in good corporate governance.  Dan’s practice focuses on the areas of mergers and acquisitions and shareholder derivative litigation.
+      <br><br>
+      Dan has served as lead or co-lead counsel in dozens of shareholder class and derivative actions nationwide, prosecuting violations of state and federal law and breach of fiduciary duty claims in connection with controlling stockholder transactions, management-led buyouts, related-party transactions, executive compensation, insider selling and stock option manipulation.
     </div>
 
     <div class="col-md-3">
     <span id="side-text-practice">
         <u>PRACTICE AREAS</u> <br>
-        Securities Fraud Litigation
-        Global Securities Litigation
-        Direct and Opt-Out Actions
-        Fiduciary Litigation
-        Antitrust & Unfair Business Practices
+        Fiduciary Litigation<br>
         Corporate Governance Litigation
     </span> 
 
@@ -200,9 +196,7 @@
 
     </div>  
 </div>
-
-
-
+<br><br><br><br><br><br>
 <!-- /////////////////////////////////////////// -->
 <!-- BEGINNING OF SOCIAL MEDIA BUTTONS -->
 <!-- <div id="social">
