udpated people LP page J daniel albert only live one

--- a/people-LP.html
+++ b/people-LP.html
@@ -135,7 +135,7 @@
     <div class="people-LP-phone">
         D &nbsp; 610.822.0276<br>
         F &nbsp; 267.948.2512<br>
-        E &nbsp; <span style="color: #007bee;"> dalbert@ktmc.com </span><br>
+        E &nbsp; <span style="color: white;"> dalbert@ktmc.com </span><br>
         L &nbsp; Radnor, PA <br>
     </div>
 
@@ -156,7 +156,9 @@
     <div class="col-md-8">
       J. Daniel Albert, a partner of the Firm, has devoted his career to prosecuting shareholder litigation, recovering substantial damages on behalf of shareholders stemming from corporate directors’ breaches of fiduciary duties, vindicating shareholders’ rights, and ensuring that public companies engage in good corporate governance.  Dan’s practice focuses on the areas of mergers and acquisitions and shareholder derivative litigation.
       <br><br>
-      Dan has served as lead or co-lead counsel in dozens of shareholder class and derivative actions nationwide, prosecuting violations of state and federal law and breach of fiduciary duty claims in connection with controlling stockholder transactions, management-led buyouts, related-party transactions, executive compensation, insider selling and stock option manipulation.
+      Dan has served as lead or co-lead counsel in dozens of shareholder class and derivative actions nationwide, prosecuting violations of state and federal law and breach of fiduciary duty claims in connection with controlling stockholder transactions, management-led buyouts, related-party transactions, executive compensation, insider selling and stock option manipulation.<br><br><br>
+      <img src="assets/images/500.jpg">&nbsp;&nbsp;&nbsp;&nbsp;
+      <img src="assets/images/litstar.png">
     </div>
 
     <div class="col-md-3">
@@ -170,10 +172,12 @@
 
     <span id="side-text-education">
         <u>EDUCATION</u> <br>
-        Temple University<br>
-        B. B. A. <i>cum laude</i><br>
-        Villanova University School of Law<br>
-        J.D. <i>cum laude</i>
+        Emory University<br>
+        B.A. 2001, <i>magna cume laude</i><br><br>
+        Wharton School of Business at University of Pennsylvania
+        Certificate of Study in Business and Public Policy 2005<br><br>
+        University of Pennsylvania Law School<br>
+        J.D. 2005 (James Wilson Fellowship in Corporate Law)
     </span>
 
     <br><br>
@@ -181,15 +185,7 @@
     <span id="side-text-admissions">
         <u>ADMISSIONS</u> <br>
         Pennsylvania<br>
-        Delaware<br>
-        New York<br>
         USDC, Eastern District of Pennsylvania<br>
-        USDC, District of Delaware<br>
-        USDC, District of Colorado<br>
-        USDC, Western District of Arkansas<br>
-        USDC, Eastern District of Arkansas<br>
-        USDC, Eastern District of Michigan<br>
-        USDC, Southern District of NY<br>
     </span>
     </div>
     
