added tabs for people lanidng page

--- a/people-LP.html
+++ b/people-LP.html
@@ -136,8 +136,11 @@
         D &nbsp; 610.822.0276<br>
         F &nbsp; 267.948.2512<br>
         E &nbsp; <span style="color: white;"> dalbert@ktmc.com </span><br>
-        L &nbsp; Radnor, PA <br>
-    </div>
+        L &nbsp; Radnor, PA <br><BR><BR>
+        <div id="tabs">OVERVIEW&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;EXPERIENCE&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;NEWS&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;PUBLICATIONS</div>
+    </div><br>
+
+ 
 
   </div>
 
@@ -159,6 +162,7 @@
       Dan has served as lead or co-lead counsel in dozens of shareholder class and derivative actions nationwide, prosecuting violations of state and federal law and breach of fiduciary duty claims in connection with controlling stockholder transactions, management-led buyouts, related-party transactions, executive compensation, insider selling and stock option manipulation.<br><br><br>
       <img src="assets/images/500.jpg">&nbsp;&nbsp;&nbsp;&nbsp;
       <img src="assets/images/litstar.png">
+
     </div>
 
     <div class="col-md-3">
