--- a/people-LP.html
+++ b/people-LP.html
@@ -156,12 +156,24 @@
 
     <div class="row">
 
-    <div class="col-md-8">
+      <div class="col-md-8">
+        <div id="experience-preview">
+          <b>REPRESENTATIVE OUTCOMES</b><br><br>
+Amicas: Merger injunction gets shareholders a better deal
+Kessler Topaz served as lead counsel in class action litigation challenging a proposed private equity buyout of Amicas that would have paid Amicas shareholders $5.35 per share in cash while certain Amicas executives retained an equity stake in the surviving entity moving forward.
+
+Kessler Topaz prevailed in securing a preliminary injunction against the deal, which then allowed a superior bidder to purchase the Company for an additional $0.70 per share ($26 million). The court complimented Kessler Topaz attorneys for causing an “exceptionally favorable result for Amicas’ shareholders” after “expend[ing] substantial resources.”
+
+        </div>
+      </div>
+
+    <div class="col-md-8" id="albert-overview">
       J. Daniel Albert, a partner of the Firm, has devoted his career to prosecuting shareholder litigation, recovering substantial damages on behalf of shareholders stemming from corporate directors’ breaches of fiduciary duties, vindicating shareholders’ rights, and ensuring that public companies engage in good corporate governance.  Dan’s practice focuses on the areas of mergers and acquisitions and shareholder derivative litigation.
       <br><br>
       Dan has served as lead or co-lead counsel in dozens of shareholder class and derivative actions nationwide, prosecuting violations of state and federal law and breach of fiduciary duty claims in connection with controlling stockholder transactions, management-led buyouts, related-party transactions, executive compensation, insider selling and stock option manipulation.<br><br><br>
       <img src="assets/images/500.jpg">&nbsp;&nbsp;&nbsp;&nbsp;
       <img src="assets/images/litstar.png">
+
 
     </div>
 
