testing social media banner color

--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
 
 <!-- /////////////////////////////////////////// -->
 <!-- BEGINNING OF SOCIAL MEDIA BUTTONS -->
-  <div id="social">
+  <div id="social1">
 			<a class="facebookBtn smGlobalBtn" href="#"></a>
 			<a class="twitterBtn smGlobalBtn" href="#" ></a>
       <a class="linkedinBtn smGlobalBtn" href="#" ></a>
